@@ -3,7 +3,7 @@ npm i recess jshint
 echo "jshint server.js client.js cloudcmd.js"
 node_modules/jshint/bin/hint --config test/.jshintrc lib/server.js lib/client.js cloudcmd.js
 echo "jshint lib/cloudfunc.js lib/client/keyBinding.js"
-node_modules/jshint/bin/hint --config test/.jshintrc lib/util.js lib/cloudfunc.js node_modules/minify/minify.js lib/client/keyBinding.js
+node_modules/jshint/bin/hint --config test/.jshintrc lib/util.js lib/cloudfunc.js lib/client/keyBinding.js
 echo "lib/client/dom.js lib/client/ie.js lib/client/menu.js lib/client/socket.js ./lib/client/terminal.js lib/client/viewer.js lib/client/storage/_github.js lib/client/menu.js lib/client/editor/_codemirror.js"
 node_modules/jshint/bin/hint --config test/.jshintrc lib/client/dom.js lib/client/ie.js lib/client/menu.js lib/client/socket.js ./lib/client/terminal.js lib/client/viewer.js lib/client/storage/_github.js lib/client/menu.js lib/client/editor/_codemirror.js
 echo "jshint ./package.json ./config.json"
@@ -12,5 +12,4 @@ node_modules/jshint/bin/hint --config test/.jshintrc ./package.json ./config.jso
 echo "recess css/*.css"
 ./node_modules/recess/bin/recess css/*.css
 node test/test.js
-npm r recess jshint
 node cloudcmd.js test
